Delete functanality added for employee

--- a/HRM/HRM.Web/Views/Employee/Index.cshtml
+++ b/HRM/HRM.Web/Views/Employee/Index.cshtml
@@ -30,7 +30,7 @@
                     <a href="/employee/Edit/@employee.Id"><i class="bi bi-pencil-square text-warning"></i></a>
                 </td>
                 <td>
-                    <a href="/employee/delete"><i class="bi bi-trash-fill text-danger"></i></a>
+                    <a href="/employee/delete/@employee.Id"><i class="bi bi-trash-fill text-danger"></i></a>
                 </td>
             </tr>
         }
