--- a/HRM/HRM.Web/Views/Employee/Add.cshtml
+++ b/HRM/HRM.Web/Views/Employee/Add.cshtml
@@ -53,7 +53,9 @@
         <label asp-for=Address class="form-label"></label>
         <textarea asp-for=Address class="form-control"></textarea>
     </div>
+
+    <div class="d-flex justify-content-center ">
+        <button type="submit" class="btn btn-lg btn-primary">Save</button>
     </div>
-  
-    <button type="submit" class="btn btn-primary">Save</button>
+     
 </form>
