--- a/HRM/HRM.Web/Views/Shared/_Layout.cshtml
+++ b/HRM/HRM.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,16 @@
                                 <li><a class="dropdown-item" href="/employee/add"><i class="bi bi-plus"></i>Add Employee</a></li>                               
                             </ul>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="/employees/index" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Admin
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/Departments/index"> <i class="bi bi-list"></i>Department</a></li>
+                                <li><a class="dropdown-item" href="/Designations/index"><i class="bi bi-list"></i>Designation</a></li>
+                            </ul>
+                        </li>
+
                     </ul>
                 </div>
             </div>
