Relation added between Department and Employee

--- a/HRM/HRM.Web/Views/Employee/Add.cshtml
+++ b/HRM/HRM.Web/Views/Employee/Add.cshtml
@@ -26,7 +26,7 @@
         
         <div class="mb-3 col-md-4">
         <label asp-for=Department class="form-label"></label>
-        <select  asp-for=Department asp-items=departments class="form-control"></select>
+        <select  asp-for=DepartmentId asp-items=departments class="form-control"></select>
         </div>
         <div class="mb-3 col-md-4">
             <label asp-for=Dob class="form-label"></label>
