--- a/HRM/HRM.Web/Views/Employee/Index.cshtml
+++ b/HRM/HRM.Web/Views/Employee/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Employee>
+﻿@using HRM.Web.ViewModels;
+@model List<EmployeeViewModel>
 
 <table class="table">
     <thead>
@@ -10,7 +11,7 @@
             <th>Gender</th>
             <th>Dob</th>
             <th>Join Date</th>
-            <th>Department</th>
+            <th>DepartmentName</th>
             <th>Designation</th>
             <th></th>
         </tr>
@@ -27,7 +28,7 @@
                 <td>@employee.Gender</td>
                 <td>@employee.Dob?.ToString("MMMM dd, yyyy")</td>
                 <td>@employee.JoinDate.ToString("MMMM dd, yyyy")</td>
-                <td>@employee.Department?.Name</td>
+                <td>@employee.DepartmentName</td>
                 <td>@employee.Designation</td>
                 <td>
                     <a href="/employee/Edit/@employee.Id"><i class="bi bi-pencil-square text-warning"></i></a>
