client side validation added

--- a/HRM/HRM.Web/Views/Employee/Add.cshtml
+++ b/HRM/HRM.Web/Views/Employee/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@using HRM.Web.Enums;
+﻿@using  HRM.Web.Enums;
 @using HRM.Web.ViewModels;
 @model EmployeeViewModel
 @{
@@ -8,14 +8,20 @@
 
 }
 
+<div div class="card p-5 shadow"> 
 <form action="/employee/add" method="post" enctype="multipart/form-data">
+    <div asp-validation-summary=ModelOnly></div>
     <div class="row">
         <div class="mb-3 col-md-4">
             <label asp-for=Name class="form-label"></label>
+            <span asp-validation-for=Name class="text-danger"></span>
             <input asp-for=Name class="form-control">
+            
         </div>
         <div class="mb-3 col-md-4">
             <label asp-for=Email class="form-label"></label>
+            <span asp-validation-for=Email class="text-danger"></span>
+
             <input asp-for=Email class="form-control">
         </div>
         <div class="mb-3 col-md-4">
@@ -71,3 +77,4 @@
     </div>
      
 </form>
+</div>
