Restructuring of Projects

--- a/HRM/HRM.Web/Views/Designations/Create.cshtml
+++ b/HRM/HRM.Web/Views/Designations/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using HRM.Web.Enums;
-@model HRM.Web.Models.Designation
+﻿@model HRM.Web.Models.Designation
 
 @{
     ViewData["Title"] = "Create";
