--- a/HRM/HRM.Web/Views/Employee/edit.cshtml
+++ b/HRM/HRM.Web/Views/Employee/edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using HRM.Web.Enums;
-@model Employee
+﻿@model Employee
 
 <form action="/employee/edit" method="post">
     <input type="hidden" asp-for=Id />
