Authentication and Authorization

--- a/HRM/HRM.Web/Views/Shared/_Layout.cshtml
+++ b/HRM/HRM.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,8 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/employee/index"> <i class="bi bi-list"></i>All Employees</a></li>
-                                <li><a class="dropdown-item" href="/employee/add"><i class="bi bi-plus"></i>Add Employee</a></li>                               
+                                <li><a class="dropdown-item" href="/employee/add"><i class="bi bi-plus"></i>Add Employee</a></li>
+                                
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -38,8 +39,11 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/Departments/index"> <i class="bi bi-list"></i>Department</a></li>
                                 <li><a class="dropdown-item" href="/Designations/index"><i class="bi bi-list"></i>Designation</a></li>
+                               
                             </ul>
+                                 
                         </li>
+                        <partial name="_LoginPartial"/>
 
                     </ul>
                 </div>
